--- a/connect_four.css
+++ b/connect_four.css
@@ -13,9 +13,14 @@ h3 {
 }
 
 .board button {
-    height: 60px;
-    width: 60px;
+    height: 10vw;
+    width: 10vw;
+    max-height: 110px;
+    max-width: 110px;
     border-radius: 50%;
-    border-width: 3px;
+    border-width: 2px;
     border-style: solid;
+    border-color: gray;
+    background-color: lightgray;
+
 }
